--- a/book/Makefile
+++ b/book/Makefile
@@ -5,10 +5,11 @@ all: weave
 	xelatex structures.tex
 
 weave:
-	noweave -delay -x ch01-singly-linked.nw > ch01-singly-linked.tex
-	noweave -delay -x ch01-doubly-linked.nw > ch01-doubly-linked.tex
-	noweave -delay -x ch02-binary-search-tree.nw > ch02-binary-search-tree.tex
-	noweave -delay -x ch02-balancing-bst.nw > ch02-balancing-bst.tex
+	noweave -delay -x ch01-array-impl.nw > ch01-array-impl.tex
+	noweave -delay -x ch02-singly-linked.nw > ch02-singly-linked.tex
+	noweave -delay -x ch02-doubly-linked.nw > ch02-doubly-linked.tex
+	noweave -delay -x ch03-binary-search-tree.nw > ch03-binary-search-tree.tex
+	noweave -delay -x ch03-balancing-bst.nw > ch03-balancing-bst.tex
 	#noweave -delay -x ch03-graph-interface.nw > ch03-graph-interface.tex
 
 bib:
@@ -31,5 +32,12 @@ compile:
 	javac structures/BinarySearchTree.java
 
 clean:
-	rm -f *.eps
-
+	rm *.log
+	rm *.eps
+	rm structures.toc
+	rm structures.aux
+	rm strucfig.mpx
+	rm ch02-singly-linked.tex
+	rm ch02-doubly-linked.tex
+	rm ch03-binary-search-tree.tex
+	rm ch03-balancing-bst.tex
